# agent-api

./: .dockerignore  .env.example  .env.test  .gcloudignore  .gitignore  Dockerfile  README.md  coverage.xml  deploy-with-migrations.sh  pyproject.toml  pytest.ini  requirements.txt
config/: agent_routing_policy.yaml  context_analysis.yaml  evaluation_config.yaml  image_models_config.yaml  pali_config.yaml  pipeline.yaml  pipeline_methods.yaml  prompt_evaluation.yaml  result_evaluation.yaml  safety_config.yaml  settings.py
docs/: PHASE_2_COMPLETE.md  Palet8-Agent-System-Restructure-Plan.md  llm_model_selection.md  log_checkpoints.md
docs/Research/: Model Pricing-大模型费用.xlsx  Palet8 Agent Swimlane.drawio.html  Prompt_Template_Framework_Print_Embroidery.md  agent-api Development Documentation.md
docs/archive/: ADK_INSTALLATION_SUCCESS.md  CHANGELOG.md  COMMON_MISTAKES.md  DEPLOYMENT_GUIDE.md  GOOGLE_ADK_COMPLIANCE.md  INSTALL_ADK.md  PHASE_4_1_WORKFLOW_VISUALIZER_COMPLETE.md  README.md  TASK_LOG_API.md  TEST_STATUS_PHASE3_20251023.md
docs/dev/: Prompt_Template_Modes_Reference.md  restructuring-plan.md
docs/test/: log_checkpoints.md  monitoring_activities.md
migrations/: init.sql
palet8_agents/: __init__.py
palet8_agents/agents/: __init__.py  (+8 more)
prisma/: schema.prisma
prompts/: dimension_filling.txt  evaluator_system.txt  genplan_system.txt  pali_system.txt  planner_system.txt  react_prompt_system.txt  requirements_extraction.txt  safety_system.txt
scripts/: vector_db_setup.sql
tests/: conftest.py  test_config.py  test_health.py  test_schema_validation.py
(+168 files in other folders)
